--- a/style/scss/components/banner-benefits.scss
+++ b/style/scss/components/banner-benefits.scss
@@ -6,6 +6,10 @@
         max-height: 870px;
     }
 
+    &__column{
+        height: 100%;
+    }
+
     &__img{
         width: 100%;
         max-height: 80%;
@@ -18,11 +22,13 @@
     }
 
     &__title{
-        margin-bottom: 3rem;
+        margin-bottom: 2rem;
+        font-size: $normalFontSize;
     }
 
     &__link{
         margin-left: 1rem;
+        font-size: $smallFontSize;
     }
 
     #banner-benefits-1{
@@ -55,15 +61,17 @@
             ". . . . . . . ."
             ". . a a a a . ."
             ". . . . . . . .";
+
+        & > *{
+            grid-area: a;
+            align-self: center;
+            justify-self: center;
+        }
     }
 
     &__text{
-        grid-area: a;
-        align-self: center;
-        justify-self: center;
-
         text-align: center;
         color: $whiteTextColor;
-        font-size: 1.4rem;
+        font-size: $mediumFontSize;
     }
 }
