--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -4,7 +4,7 @@
 @import './components/banner.scss';
 @import './components/banner-benefits.scss';
 @import './components/prices.scss';
-@import './components/big-benefits.scss';
+@import './components/about-us.scss';
 @import './components/lead-form.scss';
 @import './components/more-integrations.scss';
 @import './components/attention.scss';
