--- a/style/scss/components/header.scss
+++ b/style/scss/components/header.scss
@@ -7,7 +7,7 @@
     background-color: $bannerBackgroundColor;
 
     &__menu {
-        padding: 0.6vw 0;
+        padding: 0.5vw 0;
       }
 
     &__link{
@@ -18,7 +18,7 @@
 
     &__logo {
         width: 250px;
-        height: 40px;
+        height: 100%;
 
         justify-self: center;
     }
@@ -32,7 +32,7 @@
         text-align: right;
         font-size: $smallFontSize;
 
-        margin-top: 0.2rem;
+        margin-top: 0.2vw;
         margin-right: 5%;
     }
 
@@ -44,5 +44,17 @@
     .language-switcher{
         width: 40px;
         border-radius: 120px;
+    }
+}
+
+@include laptop{
+    .header{
+        &__contacts{
+            margin-top: 0.5vw;
+        }
+    
+        &__menu {
+            padding: 1vw 0;
+        }
     }
 }
