--- a/style/scss/components/header.scss
+++ b/style/scss/components/header.scss
@@ -7,8 +7,9 @@
     background-color: $bannerBackgroundColor;
 
     &__menu {
-        padding: 0.5vw 0;
-      }
+        display: flex;
+        align-items: center;
+    }
 
     &__link{
         font-size: $smallFontSize;
@@ -18,7 +19,7 @@
 
     &__logo {
         width: 250px;
-        height: 100%;
+        height: auto;
 
         justify-self: center;
     }
@@ -26,13 +27,18 @@
     &__controls{
         display: grid;
         grid-template-columns: 2fr 3fr;
+
+        align-items: center;
     }
 
     &__contacts{
+        height: 100%;
+        display: grid;
+        align-items: center;
+
         text-align: right;
         font-size: $smallFontSize;
-
-        margin-top: 0.2vw;
+        
         margin-right: 5%;
     }
 
@@ -44,17 +50,9 @@
     .language-switcher{
         width: 40px;
         border-radius: 120px;
-    }
-}
 
-@include laptop{
-    .header{
-        &__contacts{
-            margin-top: 0.5vw;
-        }
-    
-        &__menu {
-            padding: 1vw 0;
+        &__icon {
+            height: 75%;
         }
     }
 }
