--- a/style/scss/common/mixins.scss
+++ b/style/scss/common/mixins.scss
@@ -10,4 +10,7 @@
 @mixin mobile(){
     @media (max-width: $breakpointMobile) { @content; }
 }
-  
+
+@mixin MDP(){
+    @media screen and (max-width: $breakpointLaptop) and (min-height: $breakpointMDPHeight){ @content; }
+}
