--- a/style/scss/components/banner-benefits.scss
+++ b/style/scss/components/banner-benefits.scss
@@ -1,25 +1,17 @@
 .banner-benefits{
-    min-height: 120vh;
-    max-height: 1400px;
+    min-height: 50rem;
 
-    &__row{
-        min-height: 82vh;
-        max-height: 900px;
-    }
-
-    &__column{
-        min-height: 100%;
+    &__row-1{
+        min-height: 30rem;
     }
 
     &__img{
         width: 100%;
-        max-height: 82%;
+        max-height: 80%;
     }
 
     &__content{
         padding: 1.5rem;
-
-        max-height: 200px;
     }
 
     &__title{
@@ -50,9 +42,7 @@
 
     &__row-2{
         background-color: $bgColor5;
-
-        min-height: 38vh;
-        max-height: 530px;
+        min-height: 20rem;
 
         display: grid;
         grid-template-columns: repeat(8, 1fr);
@@ -66,7 +56,6 @@
         & > *{
             grid-area: a;
             align-self: center;
-            justify-self: center;
         }
     }
 
@@ -74,13 +63,5 @@
         text-align: center;
         color: $whiteTextColor;
         font-size: $mediumFontSize;
-    }
-}
-
-@include laptop{
-    .banner-benefits{
-        &__row{
-            max-height: 660px;
-        }
     }
 }
